# Qt_learning

./: .gitattributes  README.md
01-QMainWindow/: mainwindow.cpp
01Fisrt/: mainwindow.ui
01_smallWidget/: 01_smallWidget.pro  smallwidget.cpp  smallwidget.ui  widget.cpp  widget.ui
02_QtEvent/: mylabel.cpp  mylabel.h  widget.cpp  widget.h  widget.ui
02_QtSource/: 02_QtSource.pro  mainwindow.cpp  mainwindow.ui
02_SignalAndSlot/: 02_SignalAndSlot.pro  student.cpp  student.h  teacher.h  widget.cpp  widget.h
02test/: 02test.pro  mypushbutton.cpp  mypushbutton.h  widget.cpp
03_QDialog/: mainwindow.cpp  mainwindow.ui
03_QPainter/: widget.cpp  widget.h  widget.ui
04_Layout/: mainwindow.ui
04_QtPaintDevice/: widget.cpp  widget.h
05_Qt_Control/: res.qrc  widget.cpp  widget.ui
05_Qt_QFile/: widget.cpp  widget.ui
06_QtTreeWidget/: widget.cpp  widget.ui
07_TableWidget/: widget.cpp  widget.ui
08_OtherControl/: res.qrc  widget.cpp  widget.ui
KunFlip/: KunFlip.pro  chooselevelscene.cpp  mainscene.cpp  mycoin.cpp  mycoin.h  mypushbutton.cpp  playscene.cpp
Qt_Quick_demo/: CMakeLists.txt  main.cpp
Qt_Quick_demo2/: CMakeLists.txt  main.cpp
abxqt5_01/: mainwindow.ui
abxqt5_02_1/: widget.ui
abxqt5_02_2/: dialog.cpp  dialog.h  dialog.ui
abxqt5_02_4/: abxqt5_02_4.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc
abxqt5_o2_3/: dialog.cpp  dialog.h
abxqt_03_1/: abxqt_03_1.pro  tperson.cpp  tperson.h  widget.cpp  widget.h  widget.ui
abxqt_04_1/: widget.cpp  widget.h  widget.ui
abxqt_04_10/: mainwindow.cpp  mainwindow.h  mainwindow.ui  (+1 more)
(+3164 files in other folders)
